# gelap-cryptography

./: .env.example  .gitignore  Cargo.toml  README.md
contracts/src/fixtures/: groth16--fixture.json
crypto/: Cargo.toml
crypto/src/: bridge.rs  errors.rs  ethereum.rs  lib.rs  pedersen.rs  ring_signature.rs  utils.rs  zkproof.rs
documentation/: API_REFERENCE.md  ARCHITECTURE.md  FAQ.md  PROOF_GENERATION.md  README.md  SECURITY.md  SYSTEM_DESIGN.md  TESTING.md  USAGE_GUIDE.md
prover/: Cargo.toml  build.rs
prover/src/: lib.rs  network.rs
types/: Cargo.toml
types/src/: commitment.rs  lib.rs  proof.rs  signature.rs  stealth.rs  transaction.rs  wallet.rs
zkvm/: Cargo.toml
zkvm/.cargo/: config.toml
zkvm/src/: main.rs
