[workspace]
members = [
    "crypto",      # Cryptographic library: secp256k1 (Ethereum) + Curve25519 (ZK)
    "types",       # Shared types: transactions, commitments, signatures
    "zkvm",        # SP1 guest: verification circuit (runs inside zkVM)
    "prover",      # SP1 host: proof generation service (TEE-accelerated)
]
resolver = "2"

[workspace.dependencies]
# SP1 Dependencies
sp1-zkvm = "4.0.0"
sp1-sdk = { version = "4.0.0", features = ["network"] }

# Serialization
serde = { version = "=1.0.215" }
serde_derive = { version = "=1.0.215" }
serde_json = "1.0.133"
bincode = "1.3"

# Ethereum Cryptography (secp256k1)
secp256k1 = { version = "0.28", features = ["rand", "recovery", "serde", "global-context"] }
k256 = { version = "0.13", features = ["ecdh", "ecdsa", "serde"] }

# ZK-Efficient Cryptography (Curve25519)
curve25519-dalek = { version = "4.1", default-features = false, features = ["serde"] }

# Hashing
sha2 = "0.10"
sha3 = "0.10"
keccak-hash = "0.10"
tiny-keccak = { version = "2.0", features = ["keccak"] }
hex = "0.4"

# Random Number Generation
rand = "0.8"
rand_core = "0.6"

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# CLI & Logging
clap = { version = "4.4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async Runtime
tokio = { version = "1.35", features = ["full"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0

[profile.release.package.zkvm]
opt-level = 3