[workspace]
members = [
    "crypto",
    "types",
    "zkvm",
    "prover",
]
resolver = "2"

[workspace.dependencies]
# SP1 Dependencies
sp1-zkvm = "5.2.3"
sp1-sdk = "5.2.3"
sp1-build = "5.2.3"

# Serialization
serde = { version = "1.0" }
serde_json = "1.0"
bincode = "1.3"

# Ethereum Cryptography
secp256k1 = { version = "0.28", features = ["rand", "recovery", "serde", "global-context"] }
k256 = { version = "0.13", features = ["ecdh", "ecdsa", "serde"] }

# Curve25519
curve25519-dalek = { version = "4.1", default-features = false, features = ["serde"] }

# Hashing
sha2 = "0.10"
sha3 = "0.10"
keccak-hash = "0.10"
tiny-keccak = { version = "2.0", features = ["keccak"] }
hex = "0.4"

# Random
rand = "0.8"
rand_core = "0.6"

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# CLI & Logging
clap = { version = "4.4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async
tokio = { version = "1.35", features = ["full"] }

# Solidity
alloy-sol-types = "0.8"


scale-info = { version = "2.10.0", default-features = false }
parity-scale-codec = { version = "3.6.5", default-features = false, features = ["derive"] }
getrandom = { version = "0.2", features = ["custom"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0

[profile.release.package.cryptography-zkvm]
opt-level = 3