[package]
name = "cryptography"
version = "0.1.0"
edition = "2021"

[dependencies]

secp256k1 = { workspace = true }
k256 = { workspace = true }


curve25519-dalek = { workspace = true }


sha2 = { workspace = true }
sha3 = { workspace = true }
keccak-hash = { workspace = true }
tiny-keccak = { workspace = true }
hex = { workspace = true }


serde = { workspace = true }


rand = { workspace = true }
rand_core = { workspace = true }

thiserror = { workspace = true }

[features]
default = ["std"]
std = []