[package]
name = "cryptography-prover"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "prove"
path = "src/main.rs"

[[bin]]
name = "vkey"
path = "src/bin/vkey.rs"

[dependencies]
sp1-sdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
hex = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Use our shared types
cryptography-types = { path = "../types" }

[build-dependencies]
sp1-build = "4.0.0"